feat: create router address

--- a/functions/.prettierrc.json
+++ b/functions/.prettierrc.json
@@ -1,1 +1,7 @@
-{}
+{
+  "singleQuote": false,
+  "eslintIntegration": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "quoteProps": "consistent"
+}
