--- a/functions/package.json
+++ b/functions/package.json
@@ -15,17 +15,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "install": "^0.13.0",
+    "npm": "^8.19.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "prettier": "^2.7.1",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.5.4"
   },
   "private": true
